--- a/package.json
+++ b/package.json
@@ -3,19 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "test": "jest",
+    "dev": " next dev -p 3000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/styles": "^4.11.4",
-    "@mui/styles": "^5.1.0",
+    "@brainhubeu/react-carousel": "^2.0.4",
+    "js-cookie": "^3.0.1",
+    "jwt": "^0.2.0",
+    "local-storage": "^2.0.0",
+    "lodash": "^4.17.21",
     "next": "^11.0.0",
     "next-images": "^1.8.2",
     "next-pwa": "^5.4.0",
-    "react": "17.0.2",
+    "react": "17.0.0",
+    "react-alice-carousel": "^2.5.1",
+    "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
+    "react-notifications": "^1.7.3",
+    "react-outside-click-handler": "^1.3.0",
+    "react-paginate": "^8.1.0",
+    "react-responsive-carousel": "^3.2.22",
+    "react-toastify": "^8.1.0",
     "react-waypoint": "^10.1.0",
-    "styled-components": "^5.3.3"
+    "sass": "^1.43.4",
+    "styled-components": "^5.3.3",
+    "swiper": "^7.3.1"
+  },
+  "devDependencies": {
+    "eslint": "8.4.0",
+    "eslint-config-next": "12.0.7"
   }
 }
